fix product name align

--- a/app/assets/stylesheets/components/_tag.scss
+++ b/app/assets/stylesheets/components/_tag.scss
@@ -26,3 +26,7 @@
 .container-fluid {
   margin-bottom: 100px;
 }
+
+.product_name p {
+  width: 100px;
+}
